--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,6 +5,7 @@
     "password": "ignite",
     "database": "rentx",
     "migrations": ["./src/database/migrations/*.ts"],
+    "entities": ["./src/modules/**/*.ts"],
     "cli": {
         "migrationsDir": "./src/database/migrations"
     }
