--- a/ormconfig.json
+++ b/ormconfig.json
@@ -4,8 +4,8 @@
     "username": "docker",
     "password": "ignite",
     "database": "rentx",
-    "migrations": ["./src/database/migrations/*.ts"],
-    "entities": ["./src/modules/**/*.ts"],
+    "migrations": ["./src/shared/infra/typeorm/migrations/*.ts"],
+    "entities": ["./src/modules/**/entities/*.ts"],
     "cli": {
         "migrationsDir": "./src/database/migrations"
     }
