--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@types/multer": "^1.4.7",
+    "aws-sdk": "^2.1229.0",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "csv-parse": "^4.16.3",
